--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,3 @@
-/* @font-face {
-    font-family: 'pixel';
-    src: url('./assets/font/pixel.ttf') format('truetype'),
-    url('./assets/font/pixel.woff') format('woff'),
-    url('./assets/font/pixel.woff2') format('woff2');
-}
-
-@font-face{
-    font-family:'04b_03';
-    src:url("./assets/font/04b03b.eot"),
-    url("./assets/font/04b03b.woff2") format("woff2"),
-    url("./assets/font/04b03b.woff") format("woff"),
-    url("./assets/font/04b03b.ttf") format("truetype");
-} */
-
 body{
     margin: 0;
     padding: 0;
@@ -20,29 +5,16 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #E3CDA8;
-    
+    background-color: #E3CDA8;  
 }
 
-#home-button{
-    image-rendering: pixelated;
-    background: none;
-    border: none;
-    position: absolute;
-    top: 4rem;
-    left: 1rem;
+.display-on {
+    visibility: visible;
 }
 
-#home-img:hover{ 
-    transform: scale(1.1)
+.display-off{
+    visibility: hidden;
 }
-
-#intro-text{
-    position: absolute;
-    top: 35%;
-    image-rendering: pixelated;
-}
-
 
 #top-display{
     position: absolute;
@@ -56,20 +28,34 @@ body{
     width: 100%;
 }
 
+
+/* HOME BOTTON */
+#home-button{
+    image-rendering: pixelated;
+    background: none;
+    border: none;
+    position: absolute;
+    top: 4rem;
+    left: 1rem;
+}
+
+#home-img:hover{ 
+    transform: scale(1.1)
+}
+
+
+/* INTRO SCREEN */
+#intro-text{
+    position: absolute;
+    top: 35%;
+    image-rendering: pixelated;
+}
+
 #game-logo{
     position: absolute;
     top: 5rem;
     image-rendering: pixelated;
 }
-
-/* p{
-    position: absolute;
-    margin-top: 10rem;
-    text-align: center;
-    font-size: 1.3rem;
-    width: 30%;
-    font-family: "04b_03", monospace;
-} */
 
 #start-button{
     position: absolute;
@@ -77,35 +63,73 @@ body{
     transform: translateY(16rem);
     background: none;
     border: none;
+    z-index: 10;
 }
-
 
 #start-img{
     width: 13rem;
     image-rendering: pixelated;
-
 }
 
 #start-img:hover{ 
     transform: scale(1.1)
 }
 
-#win-screen{
+
+/* CANVAS */
+.canvas-container{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+#canvas {
+    image-rendering: pixelated;
+    width: 800px;
+    height: 500px;
+    transform: translateY(4rem);
+    border-radius: 5px;
+}
+
+#movements {
     position: absolute;
-    z-index: 1;
-    top: 4rem;
+    transform: translateY(20.8rem);
+}
+
+
+/* WIN SCREEN */
+.win-container{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    transform: translateY(4rem);
+    z-index: 10;
+}
+
+#win-screen{
     width: 800px;
     image-rendering: pixelated;
+    z-index: 11;
+}
+
+.win-form{
+    position: absolute;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+    transform: translateX(25.8rem);
+    margin-top: 12.5rem;
+    z-index: 11;
 }
 
 #send-button{
-    position: absolute;
     background: none;
     border: none;
-    z-index: 2;
-    top: 24.7rem;
-    left: 58rem;
     height: 2.3rem;
+    z-index: 11;
 }
 
 #send-button:hover{ 
@@ -113,13 +137,10 @@ body{
 }
 
 #name-input{
-    position: absolute;
+    z-index: 10;
     background: #EFE5DA;
     border: 1px solid #433229;
     border-radius: 5px;
-    z-index: 2;
-    top: 24.7rem;
-    left: 45.8rem;
     height: 2.3rem;
     width: 12rem;
     font-size: 16px;
@@ -128,88 +149,62 @@ body{
     text-align: center;
 }
 
-/* #restart-button {
+
+/* GAME OVER SCREEN */
+.game-over-container{
     position: absolute;
-    background: none;
-    border: none;
+    display: flex;
+    flex-direction: column;
+    transform: translateY(4rem);
     z-index: 2;
-    top: 23rem;
-    left: 45.5rem;
-} */
-
-#restart-img:hover{ 
-    transform: scale(1.1)
-}
-
-#canvas {
-    margin: 0 auto;
-    margin-top: 2rem;
-    image-rendering: pixelated;
-    width: 800px;
-    height: 500px;
-    transform: translateY(2rem);
-    border-radius: 05px;
-}
-
-#movements {
-    position: absolute;
-    left: 20rem;
-    bottom: 5.3rem;
-    image-rendering: pixelated;
-}
-
-.display-on {
-    visibility: visible;
-}
-
-.display-off{
-    visibility: hidden;
-}
-
-
-#diploma{
-    position: absolute;
-    z-index: 3;
-    width: 75%;
-    top: 2rem;
-    image-rendering: pixelated;
-}
-
-#name{
-    position: absolute;
-    z-index: 4;
-    font-size: 1.5rem;
-    top: 12rem;
-    margin-left: 1rem;
-    font-family: monospace;
-    text-align: center;
 }
 
 #game-over{
-    position: absolute;
-    z-index: 1;
-    top: 4rem;
-    left: 20rem;
     width: 859px;
-    height: 500px;
     image-rendering: pixelated;
-
 }
 
 #game-over-button{
     position: absolute;
-    z-index: 3;
-    top: 24.7rem;
-    left: 45.5rem;
+    z-index: 100;
     background: none;
     border: none;
+    margin-top: 21rem;
+    transform: translateX(25.5rem);
 }
 
 #game-over-img-button{
+    z-index: 100;
     margin-top: 1rem;
     height: 2.5rem;
 }
 
 #game-over-img-button:hover{ 
     transform: scale(1.1)
+}
+
+
+/* DIPLOMA */
+.diplima{
+    position: absolute; 
+    z-index: 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10rem;
+}
+
+#diploma{
+    width: 69rem;
+    image-rendering: pixelated;
+}
+
+#name{
+    position: absolute;
+    transform: translateY(-6.9rem);
+    z-index: 15;
+    font-size: 2.2rem;
+    margin-left: 1rem;
+    font-family: monospace;
+    text-align: center;
 }
